--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,54 @@
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f2f2f2;
-    margin: 0;
+  font-family: 'Arial', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background-image: url('https://images.unsplash.com/photo-1506261423908-ea2559c1f24c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1484&q=80');
+  background-size: cover;
+  background-position: center;
+}
+
+.countdown {
+  display: flex;
+  align-items: center;
+  font-size: 72px;
+}
+
+.countdown > div {
+  margin: 0 10px;
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: white;
+  background-color: #000000b4;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  animation: fadeInScale 1s ease-in-out;
+}
+
+@keyframes fadeInScale {
+  0% {
+    opacity: 0;
+    transform: scale(0.8);
   }
-  
-  .countdown-container {
-    text-align: center;
+  100% {
+    opacity: 1;
+    transform: scale(1);
   }
-  
-  .countdown {
-    font-size: 88px;
-    font-weight: bold;
-    color: #333;
-    margin-bottom: 10px;
-  }
-  
+}
+
+#days {
+  color: #007bff;
+}
+
+#hours {
+  color: #28a745;
+}
+
+#minutes {
+  color: #ffc107;
+}
+
+#seconds {
+  color: #dc3545;
+}
